--- a/i18n/en.json
+++ b/i18n/en.json
@@ -83,21 +83,19 @@
 	"button-sunburst": "View personality traits in sunburst visualization",
 	"button-science": "See the science behind the service",
 	"tooltip-not-available": "Tooltip not available",
-	"page-title-pi": "Personality Insights",
+	"page-title-pi": "Social Lite",
 	"header-ibm": "IBM",
 	"header-wdc": "Watson",
 	"header-services": "Services",
 	"header-docs": "Docs",
 	"header-starterkit": "Starter Kits",
 	"header-community": "Community",
-	"header-title-pi": "Personality Insights",
-	"header-description": "Gain insight into how and why people think, act, and feel the way they do. This service applies linguistic analytics and personality theory to infer attributes from a person's unstructured text.",
-	"gdpr-description": "*This system is for demonstration purposes only and is not intended to process Personal Data. No Personal Data is to be entered into this system as it may not have the necessary controls in place to meet the requirements of the General Data Protection Regulation (EU) 2016/679.",
+	"header-title-pi": "Social Lite",
+	"header-description": "Assists users on how to be more social with tips and events to go to. You get rewarded as you progress in social activities on social lite. Users can also go and meet up with other Social Lite users.",
 	"header-resources": "Resources:",
-	"header-apiref": "API Reference",
-	"header-documentation": "Documentation",
-	"header-fork": "Fork on Github",
-	"header-bluemix": "Start for free in IBM Cloud",
+	"header-apiref": "Referenced API ",
+	"header-fork": "Check out our Github Repo!",
+	"header-bluemix": "Check out our DevPost!",
 	"header-forkdeploy": "Fork and Deploy on IBM Cloud",
 	"sunburst-title": "Sunburst Chart Visualization",
 	"sunburst-back": "Go back",
@@ -125,5 +123,7 @@
 	"twitterlang-ja": "JA",
 	"twitterlang-ko": "KO",
 	" text-placeholder ": " text-placeholder ",
-	"lang-korean": "lang-korean"
+	"lang-korean": "lang-korean",
+	"header-documentation": "header-documentation",
+	"gdpr-description": "gdpr-description"
 }
